# capsule

./: .dockerignore  .gitignore  README.md
agents/catalog/base/: Dockerfile  README.md  requirements.txt
agents/catalog/base/src/: client.py
capsule/: .gitignore  Cargo.toml
capsule-agents/: README.md
capsule-agents/catalog/base/: docker-compose.yml  requirements.txt
capsule-agents/catalog/base/src/: server.py
capsule-runtime/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  FUTURE_TASKS.md  README.md  docker-compose.yml  logo.txt  multipass-vm-setup.md  next-task.md  tree.txt
capsule-runtime-eBPF/: Cargo.toml  Makefile  README.md  build.sh
capsule-runtime-eBPF/hello-eBPF/: build.rs
capsule-runtime-eBPF/hello-eBPF/.cargo/: config.toml
capsule-runtime-eBPF/hello-eBPF/src/: bpf.rs  userspace_loader.rs
capsule-runtime-eBPF/hello-ebpf-kern/: Cargo.toml
capsule-runtime-eBPF/hello-ebpf-kern/.cargo/: config.toml
capsule-runtime-eBPF/hello-ebpf-kern/src/: main.rs
capsule-runtime-v2/: Cargo.toml  README.md  TODO_SESSION.md  UNFINISHED_SESSION.md  v2.md
capsule-runtime-v2/classify/: Cargo.toml
capsule-runtime-v2/cli/: Cargo.toml
capsule-runtime-v2/cli/src/: cli.rs  commands.rs  ipc.rs  main.rs  monitor.rs  pipeline.rs  session.rs
capsule-runtime-v2/core/: Cargo.toml
capsule-runtime-v2/core/src/: events.rs  lib.rs  process_event.rs  syscall_event.rs  tree.rs  workflow.rs
capsule-runtime-v2/ebpf-trace/: README.md
capsule-runtime-v2/ebpf-trace/trace-ebpf/src/: main.rs
capsule-runtime-v2/ebpf-trace/trace/src/: lib.rs  main.rs
capsule-runtime-v2/ebpf-trace/trace/tests/: process_split_test.py
capsule-runtime-v2/ebpf-trace/trace/tests/scripts/: test_subprocess.py
capsule-runtime-v2/enrich/: Cargo.toml
capsule-runtime-v2/io/: Cargo.toml
capsule-runtime-v2/io/src/: lib.rs
capsule-runtime-v2/parse/: Cargo.toml
capsule-runtime-v2/parse/src/: lib.rs
capsule-runtime-v2/report/: Cargo.toml
capsule-runtime-v2/scripts/: README.md
capsule-runtime-v2/state/: Cargo.toml
capsule-runtime-v2/state/examples/: tui_access.rs
capsule-runtime-v2/state/src/: lib.rs
capsule-runtime-v2/trace/: Cargo.toml
capsule-runtime-v2/trace/src/: lib.rs
capsule-runtime-v2/track/: Cargo.toml
capsule-runtime-v2/track/src/: lib.rs
capsule-runtime/notes/: enhanced-event-plans.txt  process-architecture.txt
capsule-runtime/resources/: capsule.yml  hello_trace.txt
capsule-runtime/scripts/: Cargo.toml  README.md  capsule-venv-test.sh  commands.txt  hello_bpf.py  hello_fastapi.py  trace_open.py
capsule-runtime/scripts/src/: profile_syscalls.rs
capsule-runtime/src/: aggregator.rs  cli.rs  client.rs  constants.rs  daemon.rs  database.rs  enricher.rs  io.rs  lib.rs  log.rs  main.rs  model.rs  parser.rs  pipeline.rs  policy.rs  profile.rs  protocol.rs  risk.rs  run.rs  runs.rs  runtime.rs  sandbox.rs  tail.rs  trace.rs  watch.rs
capsule-runtime/src/not_ready/: cli.rs  lib.rs  log.rs  runtime.rs
capsule-runtime/src/old_relevant_code/: old_log.rs
capsule-runtime/src/parser/: classification.rs  forensic.rs  network.rs  semantic.rs  strace.rs
capsule-runtime/tests/: log_verification.rs  runtime_echo.rs  test_logs.rs  test_policy.rs  test_sandbox.rs
capsule-sdk/: pyproject.toml  requirements.txt
capsule-sdk/src/capsule_sdk/: policy.py
capsule-sdk/tests/: requirements.txt  test_policy.py
capsule-sdk/tests/fixtures/: bad_regex.yml  good_policy.yml  rel_path.yml
capsule/cli/src/: commands.rs  main.rs  monitor.rs  pipeline.rs
capsule/core/src/: domain_event.rs
capsule/ebpf-trace/: .gitignore  Cargo.toml  Dockerfile  README.md
capsule/ebpf-trace/trace-common/: README.md
capsule/ebpf-trace/trace-common/src/: aarch64_syscalls.rs  lib.rs
capsule/ebpf-trace/trace-common/src/syscalls/: mod.rs
capsule/ebpf-trace/trace-common/src/syscalls/arch/: aarch64.rs  mod.rs  x86_64.rs
capsule/ebpf-trace/trace-ebpf/src/: main.rs
capsule/ebpf-trace/trace-userspace/: Cargo.toml  README.md
capsule/ebpf-trace/trace-userspace/src/: lib.rs  main.rs
capsule/ebpf-trace/trace-userspace/tests/: test_raw_syscall_events.rs
capsule/ebpf-trace/trace-userspace/tests/scripts/: test_fork.py  test_multiprocessing.py
capsule/ebpf-trace/trace/src/: lib.rs  main.rs
capsule/ebpf-trace/trace/tests/: integration_tests.rs  process_enrichment_tests.rs  test_raw_syscall_events.rs
capsule/ebpf-trace/trace/tests/scripts/: test_chain_fork.py  test_execve.py
capsule/io/: Cargo.toml
capsule/parse/src/: lib.rs
capsule/scripts/: test_agent.py
capsule/state/: Cargo.toml
capsule/state/src/: human.rs  lib.rs
capsule/trace/src/: lib.rs
eBPF-example/: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  test.sh
eBPF-example/src/common/src/: lib.rs
eBPF-example/src/hello-ebpf-kernelspace/: Cargo.toml
eBPF-example/src/hello-ebpf-kernelspace/src/: main.rs
eBPF-example/src/hello-ebpf-userspace/: Cargo.toml
eBPF-example/src/hello-ebpf-userspace/src/: lib.rs  userspace_loader.rs
integration/: Dockerfile  README.md  docker-compose.yml
integration/supabase/: IMPLEMENTATION.md  README.md  init.sql  kong.yml  schema.sql
integration/test_prompts/: nasa_api.txt
trace/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
trace/trace/: Cargo.toml  build.rs
trace/trace-common/: Cargo.toml
trace/trace-common/src/: lib.rs
trace/trace-ebpf/: Cargo.toml
trace/trace-ebpf/src/: main.rs
trace/trace/src/: main.rs
trace/trace/tests/: process_tracking_tests.rs  test_process_tracking.rs
trace/trace/tests/scripts/: test_double_fork.py  test_system.py  test_threading.py
