[workspace]
members = [
  "cli",
  "trace"
]


[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tokio-util = "0.7"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.package]
version = "0.1.0"
edition = "2021"
