# Cargo.toml

[package]
name = "capsule"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "capsule"
path = "src/main.rs"

[dependencies]
anyhow      = "1.0.98"
blake3      = "1.8.2"
cap-std     = "3.4.4"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", default-features = true, features = ["derive", "env"] }
daemonize = "0.5.0"
hex = "0.4.3"
libc        = "0.2.172"
nix = {version="0.30.1", features = ["signal", "process", "ptrace"]}
once_cell = "1.21.3"
seccompiler = "0.5.0"
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
syscalls = "0.6.18"
uuid = {version = "1.17.0", features = ["v4", "serde"]}

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
