# Cargo.toml

[package]
name = "capsule"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "capsule"
path = "src/main.rs"

[dependencies]
anyhow      = "1.0.98"                    # ergonomic error handling
blake3      = "1.8.2"                     # hash-chain
chrono      = { version = "0.4.41", features = ["serde"] }  # human ts in logs
clap        = { version = "4.5.37", default-features = true, features = ["derive", "env"] }
ctrlc       = "3.4.7"                     # Ctrl-C graceful shutdown
daemonize = "0.5.0"
dirs = "6.0.0"
hex         = "0.4.3"                     # hex-encode Blake3 digests
libc        = "0.2.172"                   # misc constants
nix         = { version = "0.30.1", features = ["signal", "process", "ptrace"] }
once_cell   = "1.21.3"                    # lazy statics
# seccompiler = "0.5.0"                     # seccomp profile loader (future) - Linux only
serde       = { version = "1.0.219", features = ["derive"] }
serde_json  = "1.0.140"
smallvec = { version = "1.15", features = ["serde"] }
syscalls    = "0.6.18"                    # name↔number lookup for Linux syscalls
tokio       = { version = "1.37", features = ["full"] }     # async runtime
tokio-util = "0.7"
uuid        = { version = "1.17.0", features = ["v4", "serde"] }
tokio-postgres = "0.7"
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
