[project]
name = "capsule-sdk"
version = "0.1.0"
description = ""
authors = [
    {name = "spiralClouds",email = "100466805+spiralClouds@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "capsule_sdk", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
