[workspace]
members = [ 
  "cli", "core", "io", "parse", 
  "trace"
, "state"]


[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tokio-util = "0.7"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.28"
crossterm = "0.28"
dirs = "5.0"
libc = "0.2"


[workspace.package]
version = "0.1.0"
edition = "2021"
