[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "capsule"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trace = { path = "../trace" }
