[package]
name = "hello-ebpf-kern"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello-kern"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1"
common = { path = "../common" }

[profile.dev]
panic = "abort"
debug = true
opt-level = 2

[profile.release]
panic = "abort"
debug = false
opt-level = 3