[package]
name = "hello-eBPF"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello-eBPF"
path = "src/userspace_loader.rs"

[dependencies]
aya = { workspace = true, features = ["async_tokio"] }
aya-log = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
env_logger = "0.10"
libc = "0.2"
aya-ebpf = { version = "0.1.1", optional = true }

[features]
default = []
ebpf = ["aya-ebpf"]

[build-dependencies]
# aya-tool = "0.13"  # Not needed for simple programs

[lib]
name = "hello_eBPF"
crate-type = ["cdylib"]
